syntax = "proto3";

package store;

option go_package = "store";

message AddrAmount {
    uint64 amount =1;
    uint64 sequence =2;
}